# smart-reader

./: .gitignore  AGENT_IMPROVE.md  ARCHITECTURE.md  DB_RELATIONSHIP.md  NEXTSTEP.md  PLAN.md  PLAN_ARCHITECTURE_UPGRADE.md  README.md  WEEK1_COMPLETION_SUMMARY.md  WEEK1_DEFINITION_OF_DONE.md  WEEK1_VALIDATION_GUIDE.md  start_app.bat  start_app.sh  start_desktop.bat  start_desktop.sh
.github/skills/run-code-fixer-on-update/: SKILL.md
.github/workflows/: ci.yml
.opencode/skills/update-plan-status-after-feature/: SKILL.md
backend/: .env.template  .week1_token.txt  Readme.md  alembic.ini  health_check.py  init_data.sql  requirements.txt  run_dev.py  run_prod.py  run_stage.py  start_server.bat  start_server.sh
backend/alembic/: env.py
backend/alembic/versions/: 4e1f90753dc8_initial_migration.py  7ef760e043d2_add_indexed_at_timestamp_to_document_.py  99e78cdfc55d_add_knowledge_points_and_knowledge_.py  (+13 more)
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/providers/: base.py  (+5 more)
backend/scripts/: release_check.py  week1_eval.py  week4_eval.py
docs/: CNAME  index.html  script.js  styles.css
frontend/: eslint.config.js  index.html  package-lock.json  package.json  start_frontend.bat  start_frontend.sh  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  Layout.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+87 files in other folders)
