[package]
name = "smart-reader-desktop"
version = "0.1.0"
description = "Smart Reader desktop app"
authors = ["smart-reader"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata]
tauri = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
